# serializer version: 1
# name: test_adam_water_heater_snapshot[platforms0][water_heater.opentherm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 40.0,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'comfort',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.opentherm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'plugwise',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'e4684553153b44afbef2200885f379dc-opentherm',
    'unit_of_measurement': None,
  })
# ---
# name: test_adam_water_heater_snapshot[platforms0][water_heater.opentherm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 37.3,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OpenTherm',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 40.0,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'comfort',
        'off',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'off',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 3>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 60.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.opentherm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_anna_water_heater_snapshot[platforms0-False-anna_v4_dhw][water_heater.opentherm-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 30.0,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'comfort',
        'off',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'water_heater',
    'entity_category': None,
    'entity_id': 'water_heater.opentherm',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'plugwise',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <WaterHeaterEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'cd0e6156b1f04d5f952349ffbe397481-opentherm',
    'unit_of_measurement': None,
  })
# ---
# name: test_anna_water_heater_snapshot[platforms0-False-anna_v4_dhw][water_heater.opentherm-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <WaterHeaterStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 45.0,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'OpenTherm',
      <WaterHeaterCapabilityAttribute.MAX_TEMP: 'max_temp'>: 60.0,
      <WaterHeaterCapabilityAttribute.MIN_TEMP: 'min_temp'>: 30.0,
      <WaterHeaterCapabilityAttribute.OPERATION_LIST: 'operation_list'>: list([
        'comfort',
        'off',
      ]),
      <WaterHeaterStateAttribute.OPERATION_MODE: 'operation_mode'>: 'off',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <WaterHeaterEntityFeature: 3>,
      <WaterHeaterStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <WaterHeaterStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <WaterHeaterStateAttribute.TEMPERATURE: 'temperature'>: 60.0,
    }),
    'context': <ANY>,
    'entity_id': 'water_heater.opentherm',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
